# SCRAM

./: .gitignore  CSZ_CNTR.ipynb  CZT.py  Experiment Code Shell  PR.txt  README.md  XRS4_driver.py  datarun1.955724  detExp.ipynb  doseExp.txt  expcodeshell.ipynb  runExp.py  temp_record_2024-02-21 16:34:3.955724
DDRN-E5mini/: encodeBase64.ipynb  pinAssignment.txt  platformio.ini
DDRN-E5mini-PIO/src/: detector.cpp  flashMemory.cpp  sensor.cpp  sensor.h
DDRN-E5mini-STM/: .cproject  .mxproject  .project  Seeed-LoRa-E5 Debug.launch  Seeed-LoRa-E5.ioc  pinAssignment.txt
DDRN-E5mini-STM/Debug/: Seeed-LoRa-E5.elf  Seeed-LoRa-E5.list  Seeed-LoRa-E5.map  makefile  objects.list  sources.mk
DDRN-E5mini/src/: detector.h  flashMemory.h  main.cpp  sensor.cpp  sensor.h
DDRN_Hardware/: #auto_saved_files#  DDRN_Hardware.kicad_pcb  DDRN_Hardware.kicad_pro  DDRN_Hardware.kicad_sch  E5_mini_dev_items.kicad_sch  fp-lib-table  sym-lib-table  ~DDRN_Hardware.kicad_sch.lck
DDRN_Hardware/v0.1/: #auto_saved_files#  DDRN_Hardware.csv  DDRN_Hardware.kicad_pcb  DDRN_Hardware.kicad_prl  DDRN_Hardware.kicad_pro  DDRN_Hardware.kicad_sch  DDRN_Hardware.xml  DDRN_Hardware_v.0.1.kicad_prl  DDRN_Hardware_v.0.1.kicad_pro  E5_mini_dev_items.kicad_sch  fp-info-cache  sym-lib-table  ~DDRN_Hardware.kicad_pcb.lck
DDRN_Hardware/v0.1_perdue/: DDRN_Hardware.csv  DDRN_Hardware.kicad_pcb  DDRN_Hardware.kicad_prl  DDRN_Hardware.kicad_pro  DDRN_Hardware.kicad_sch  DDRN_Hardware.xml  fp-info-cache  fp-lib-table
E5-Detector/: E5-Detector-eagle-import.kicad_sym  E5-Detector.kicad_pcb  E5-Detector.kicad_prl  E5-Detector.kicad_pro  E5-Detector.kicad_sch  New_Library.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table
E5-Detector/BMA400/: BMA400.kicad_sym  XDCR_BMA400.kicad_mod
E5-Detector/Library.pretty/: E5-mini.kicad_mod
LoRa-E5-EndNode/: .cproject  Seeed-LoRa-E5.ioc
LoRa-E5-EndNode/Debug/: Seeed-LoRa-E5.elf  Seeed-LoRa-E5.list  Seeed-LoRa-E5.map  makefile  objects.list  sources.mk
LoRaWan-Node/: binaryFileLocation.txt  loraAppEuiandKeyLocation.txt  messageFormatLocation.txt
MINES-Sim/: calcData.json  entities.json  genMinesInput.ipynb  pyTorch_model.ipynb  test.json  uploadTest.json
Seeed-LoRa-E5-FW1.3/: .cproject  .mxproject  Seeed-LoRa-E5 Debug (2).launch  Seeed-LoRa-E5.ioc  pinAssignment.txt
Seeed-LoRa-E5-FW1.3/Debug/: Seeed-LoRa-E5.elf  Seeed-LoRa-E5.list  Seeed-LoRa-E5.map  makefile  objects.list
chirpstack-docker/: API key.txt  README.md  docker-compose.yml  enable_ntp_server.bat  token
chirpstack-docker/chirpstack/: LICENSE  README.md  docker-compose-env.yml  docker-compose.yml
chirpstack-docker/initial_setup/: docker-compose.yml
firmware/: .mxproject  CMakeLists.txt  Makefile  STM32-for-VSCode.config.yaml  STM32Make.make  firmware.ioc  openocd.cfg  pinAssignment.txt
firmware/Core/Inc/: digitalIO.h  main.h  stm32wlxx_hal_conf.h  stm32wlxx_it.h
firmware/Core/Src/: digitalIO.cpp  main.c  main.cpp  stm32wlxx_hal_msp.c  stm32wlxx_it.c
firmware/EWARM/: firmware.ewd  firmware.ewp
firmware/source/: application.cpp  application.hpp  digitalIO.cpp  digitalIO.hpp
monoCtrl/: #auto_saved_files#  200_11OCT_1507066U1.TXT  fp-info-cache  fp-lib-table  gratingCalibration.ipynb  monoCtrl-B_Paste.gbr  monoCtrl-Edge_Cuts.dxf  monoCtrl-Edge_Cuts.gbr  monoCtrl-F_Cu.gbr  monoCtrl.kicad_pcb  monoCtrl.kicad_prl  monoCtrl.kicad_pro  monoCtrl.kicad_sch  sym-lib-table  uC.kicad_sym  ~monoCtrl.kicad_pcb.lck
monoCtrl/fw/: Phosphor.code-workspace  (+1 more)
(+382 files in other folders)
